<resources>
    <string name="app_name">XPand</string>
    <string name="welcome_to_xpand">Welcome to XPand</string>
    <string name="mobile_number">Mobile Number</string>

    <string name="add_Customer">Add Customer</string>

    <string name="all">ALL</string>


    <string name="name">Name<font fgcolor="red"> *</font></string>
    <string name="mob_number">Mobile<font fgcolor="red"> *</font></string>
    <string name="email">Email</string>
    <string name="add1">Address Line1</string>
    <string name="add2">Address Line2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="gst_no">GST Number</string>
    <string name="update">Update</string>
    <string name="edit_category">Edit Category</string>
    <string name="add_category">Add Category</string>


    <!-- Strings related to add user -->
    <string name="user_name">User Name<font fgcolor="red"> *</font></string>
    <string name="password">Password<font fgcolor="red"> *</font></string>
    <string name="is_admin">Is Admin</string>
    <string name="save">Save</string>
    <string name="add_user">Add User</string>

    <!-- Strings related to change password -->
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password<font fgcolor="red"> *</font></string>
    <string name="new_password">New Password<font fgcolor="red"> *</font></string>
    <string name="conform_new_password">Confirm Password<font fgcolor="red"> *</font></string>
    <string name="new_user_name">New User Name (Optional)</string>

    <string-array name="rounding_direction_name">
        <item>Up</item>
        <item>Down</item>
        <item>Off</item>
    </string-array>
    <string-array name="rounding_direction_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="item_selection_name">
        <item>Camera</item>
        <item>Item List</item>
        <item>Ask every time</item>
    </string-array>
    <string-array name="item_selection_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="item_list_selection_name">
        <item>Rate change</item>
        <item>Qty change</item>
    </string-array>
    <string-array name="item_list_selection_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="registration_name">
        <item>Regular</item>
        <item>Composite</item>
        <item>Unregistered</item>
    </string-array>
    <string-array name="registration_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="tax_type_name">
        <item>Inclusive</item>
        <item>Exclusive</item>
    </string-array>
    <string-array name="tax_type_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="suffix_prefix_name">
        <item>Suffix</item>
        <item>Prefix</item>
    </string-array>
    <string-array name="suffix_prefix_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="discount_name">
        <item>Percentage</item>
        <item>Value</item>
    </string-array>
    <string-array name="discount_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="paper_size_name">
        <item>2 inch</item>
        <item>3 inch</item>
    </string-array>
    <string-array name="aper_size_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="printer_type_name">
        <item>Bluetooth</item>
        <item>USB</item>
    </string-array>
    <string-array name="printer_type_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="printer_brand_name">
        <item>CieBluetoothPrinter</item>
        <item>Epson</item>
        <item>Sunmi</item>
    </string-array>
    <string-array name="printer_brand_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user_name">Invalid Username</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Epson SDK -->
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="title_msg_description">Description</string>
    <string name="title_target">Target</string>

    <!--menu_add_item_category-->
    <string name="add_item">Add Item</string>
    <string name="customers">Customers</string>
    <string name="bill_report">Bill Report</string>
    <string name="todays_sale_report">Today\'s Sales Report</string>
    <string name="item_report">Itemwise Sales Report</string>
    <string name="customer_report">Customerwise Sales Report</string>
    <string name="bill_cancel">Bill Cancel</string>
    <string name="settings">Settings</string>
    <string name="title_activity_gst_bill">GstBillActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
